package com.lldprep.systems.meetingroomscheduler.model;

public enum Amenity {
    PROJECTOR,
    WHITEBOARD,
    VIDEO_CONFERENCING,
    CONFERENCE_PHONE
}
